--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,11 @@
+<footer class="p-5 bg-dark text-white text-center position-relative mt-auto">
+ <div class="container">
+    <p class="lead">Copyright &copy;SEO Buddy</p>
+    <a href="#" class="position-absolute bottom-0 end-0 p-5" aria-label="return to top of page">
+    <i class="bi bi-arrow-up-circle h1 text-primary"></i>
+    </a>
+ </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>   
 </body>
 </html>
-Footer
