--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,24 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Design Palette</title>
+    <title>SEO Buddy</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="imgs/dp-favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"/>
     <link rel="bootstrap-stylesheet" href="/public/custom-scss/custom.scss">
+
+    <!-- Google Fonts -->
+    <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/css/style.css" />
     <!-- Fonts & Icons -->
   </head>
-  <body d-flex flex-column min-vh-100>
-    <header class="container-fluid">
-      <div class="text-center bg-image d-flex justify-content-center align-items-center" style="background-image: url('../imgs/23.jpg')">
-        <img src="/imgs/DesignPalette_Logo.png" id="headerLogo" alt="design palette logo">
+
+  <body d-flex flex-column>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">SEO Buddy</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link active" href="#">Features</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link active" href="/signup">SignUp</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/login" tabindex="-1">Login</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </header>   
+    </nav>
   </body>
 </html>
