--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="p-5 bg-dark text-white text-center position-relative mt-auto">
  <div class="container">
-    <p class="lead">Copyright &copy;SEO Buddy</p>
+    <p class="lead">Copyright &copy; Mint SEO</p>
     <a href="#" class="position-absolute bottom-0 end-0 p-5" aria-label="return to top of page">
     <i class="bi bi-arrow-up-circle h1 text-primary"></i>
     </a>
