--- a/views/partials/logged-in-nav.ejs
+++ b/views/partials/logged-in-nav.ejs
@@ -40,7 +40,7 @@
 <nav class="nav flex-column mt-1">
     <a class="nav-link active" href="/dashboard">Dashboard</a>
     <a class="nav-link" href="/projects">Projects</a>
-    <a class="nav-link" href="/assignee">Team Members</a>
+    <a class="nav-link" href="/teamMembers">Team Members</a>
     <a class="nav-link disabled" href="#">Disabled</a>
   </nav>
   </body>
