--- a/views/project.ejs
+++ b/views/project.ejs
@@ -1,6 +1,5 @@
 <%- include('partials/logged-in-nav') -%>
 <div class="container">
-  
 
    <!-- Button trigger modal -->
    <div class="col-3">
@@ -26,8 +25,14 @@
               <textarea class="form-control" id="taskName" name="taskName"></textarea>
             </div>
             <div class="mb-3">
-              <label for="assignee" class="form-label">Assigned To:</label>
-              <textarea class="form-control" id="assignee" name="assignee"></textarea>
+              <label for="teamMembers" class="form-label">Team member</label>
+              <br>
+              <select name="teamMember" id="teamMembers" placeholder="Name"> 
+                <% var options = []; %>
+                <% for(var i=0; i <projects.length; i++) {%>
+                  <option value='<%= i %>'> <%=i%> </option>
+                <% } %>
+              </select>
             </div>
             <div class="mb-3">
               <label for="notes" class="form-label">Notes</label>
@@ -58,7 +63,7 @@
               <ul class="list-group">
                 <li class="list-group-item" id="projectName"><strong>Project Name: </strong><%= projects[i].projectName%></li>
                 <li class="list-group-item" id="taskName"><strong>Task Name: </strong><%= projects[i].taskName%>  </li>
-                <li class="list-group-item" id="assignee"><strong>Assigned To: </strong> <a href="/assignee" class="text-decoration-none fw-bold text-primary"><p> <%= projects[i].assignee%></p></a> </li>
+                <li class="list-group-item" id="teamMembers"><strong>Assigned: </strong> <a href="/teamMembers/<%= projects[i]._id%>" class="text-decoration-none fw-bold text-primary"><p> <%= projects[i].teamMember%></p></a> </li>
                 <li class="list-group-item" id="notes"><strong>Notes: </strong><%= projects[i].notes%> </li>
                 <li class="list-group-item" id="date"><strong>Due: </strong> <%= projects[i].dueDate%></li>
               </ul> 
@@ -68,12 +73,7 @@
           <% } %>
       </ul>
     </div>
-  </div> 
-    <div class="col col-md-2 justify-content-end align-items-end">
-        <a href="/profile" class="text-decoration-none fw-bold text-dark"><p> <%= user.userName %></p></a>
-        <a href="/logout" class="col-7 btn btn-secondary">Logout</a>
-    </div>
-  </div>
+
 </div>
 </div>
 <%- include('partials/footer') -%>
