--- a/views/project.ejs
+++ b/views/project.ejs
@@ -29,8 +29,8 @@
               <br>
               <select name="teamMember" id="teamMembers" placeholder="Name"> 
                 <% let options = []; %>
-                <% for(let i=0; i<teamMembers.length; i++) {%>
-                  <option value='<%= teamMembers[i].name %>'> <%= teamMembers[i].name%> </option>
+                <% for(let i=0; i<projectsFromCollection.length; i++) {%>
+                  <option value='<%= projectsFromCollection[i].assignee %>'> <%= projectsFromCollection[i].assignee%> </option>
                 <% } %>
               </select>
             </div>
@@ -57,18 +57,17 @@
   <div class="row mt-0">
     <div class="col">
       <ul class="row list-unstyled">
-        <% for(var i=0; i<projects.length; i++) {%>
+        <% for(var i=0; i<projectsFromCollection.length; i++) {%>
           <li class="col-6 justify-content-between mt-5">
             <div class="card ms-4">
               <ul class="list-group">
-                <li class="list-group-item" id="projectName"><strong>Project Name: </strong><%= projects[i].projectName%></li>
-                <li class="list-group-item" id="taskName"><strong>Task Name: </strong><%= projects[i].taskName%>  </li>
-                <li class="list-group-item" id="teamMembers"><strong>Assigned: </strong> <a href="/teamMembers/<%= teamMembers[i]._id%>" class="text-decoration-none fw-bold text-primary"><p> <%= teamMembers[i].name%> </p></a> </li>
-                <li class="list-group-item" id="notes"><strong>Notes: </strong><%= projects[i].notes%> </li>
-                <li class="list-group-item" id="date"><strong>Due: </strong> <%= projects[i].dueDate%></li>
+                <li class="list-group-item" id="projectName"><strong>Project Name: </strong><%= projectsFromCollection[i].projectName%></li>
+                <li class="list-group-item" id="taskName"><strong>Task Name: </strong><%= projectsFromCollection[i].taskName%>  </li>
+                <li class="list-group-item" id="teamMembers"><strong>Assigned: </strong> <p> <%= projectsFromCollection[i].assignee%> </p></a> </li>
+                <li class="list-group-item" id="notes"><strong>Notes: </strong><%= projectsFromCollection[i].notes%> </li>
+                <li class="list-group-item" id="date"><strong>Due: </strong> <%= projectsFromCollection[i].dueDate%></li>
               </ul> 
             </div>
-  
           </li>
           <% } %>
       </ul>
