--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <%- include('partials/header') -%>
 
 <main class="container pt-3">
@@ -8,8 +9,6 @@
         </div>
         <img src="/images/assign task.webp" class="img-fluid bg-img" alt="">
     </div>
-  
-   
 </main>
     
 
