--- a/views/partials/logged-in-nav.ejs
+++ b/views/partials/logged-in-nav.ejs
@@ -29,15 +29,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Mint SEO</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-        </div>
       </div>
     </nav>
 <!-- Side Nav Menu -->
-<nav class="nav flex-column mt-1">
+<nav class="nav d-md-flex  mt-1">
     <a class="nav-link active" href="/dashboard">Dashboard</a>
     <a class="nav-link" href="/projects">Projects</a>
     <a class="nav-link" href="/teamMembers">Team Members</a>
