--- a/views/project.ejs
+++ b/views/project.ejs
@@ -42,7 +42,7 @@
             </div>
             <div class="mb-3">
               <label for="Date" class="form-label">Due Date</label>
-              <input type="date" class="form-control" id="Date" name="dueDate" value="date">
+              <input type="date" class="form-control" id="Date" name="dueDate" required pattern="\d{2}-\d{2}-\d{4}" value="date">
             </div>
             <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
           </form>
